--- a/css/loadstyle.css
+++ b/css/loadstyle.css
@@ -1,52 +1,22 @@
 body {
-  background-color: #f6f6f6;
-  min-height: 100vh;
-  width: 100%;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+  background-color: #c99912;
   overflow: hidden;
-}
-.loader {
-  display: flex;
+  text-align:center;
 }
 
-.circle {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  margin-right: 10px;
-
-  animation-name: loading;
-  animation-duration: 0.6s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.circle:first-child {
-  background-color: #a10702;
-  animation-delay: 0s;
-}
 
-.circle:nth-child(2) {
-  background-color: #f44708;
-  animation-delay: 0.2s;
-}
-
-.circle:nth-child(3) {
-  background-color: #faa613;
-  animation-delay: 0.4s;
-  margin-right: 0px;
-}
-
-@keyframes loading {
-  from {
-    transform: translateY(30px);
-  }
-  to {
-    transform: translateY(0px);
-  }
+svg{
+ position:absolute;
+  width:100%;
+  height:100%;
+  visibility:hidden;
+  transform:translate(-50%, 0%);
 }
