--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #e9c46a;
+    background-color: white;
     margin:0%;
     padding:0%;
 }
@@ -79,7 +79,7 @@ img{
 nav
 {
    overflow: hidden;
-   background-color: #172259;
+   background-color: #216669;
    padding: 10px;
 }
 .links
